<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".RateActivity">

    <EditText
        android:id="@+id/rmb"
        android:gravity="center"
        android:hint="@string/rmb_hint"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/showOut"
        android:textSize="35sp"
        android:gravity="center"
        android:text="@string/app_name"/>
    <Button
        android:layout_width="match_parent"
        android:text="@string/btn_dollar_label"
        android:onClick="onClick"
        android:layout_height="wrap_content"
        android:id="@+id/btn_dollar"/>
    <Button
        android:layout_width="match_parent"
        android:text="@string/btn_euro_label"
        android:onClick="onClick"
        android:layout_height="wrap_content"
        android:id="@+id/btn_euro_label"/>
    <Button
        android:layout_width="match_parent"
        android:onClick="onClick"
        android:text="@string/btn_won_label"
        android:layout_height="wrap_content"
        android:id="@+id/btn_won_label"/>

    <Button
        android:id="@+id/btn_opencfg"
        android:onClick="openOne"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_opencfg_label" />


</LinearLayout>